--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,106 @@ title: MyCloud | Home
             </div> <!-- /.advanced__form-->
     </section>
 
+    <!-- loads --------------------- -->
     <section class="loads">
+        <div class="loads__head">
+            <div class="loads__head-left">
+                <h5>
+                    Available Loads
+                </h5>
+                <span class="loads__number" name="loads_number">(8)</span>
+            </div>
+            <div class="loads__head-right">
+                <p class="loads__head-update">
+                    Last Update:
+                </p>
+                <!-- time block -->
+                <div id="loads__head_time_block"></div>
+                <!-- end time block -->
+                <div class="loads__head-refresh" id="loads__head-refresh">
+                    <form class="loads__head-btn" id="loads__head-btn" action="#">
+                        <button type="submit" value = "Refresh" onclick="history.go(0)">
+                            <!-- <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="sync-alt" class="svg-inline--fa fa-sync-alt fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M370.72 133.28C339.458 104.008 298.888 87.962 255.848 88c-77.458.068-144.328 53.178-162.791 126.85-1.344 5.363-6.122 9.15-11.651 9.15H24.103c-7.498 0-13.194-6.807-11.807-14.176C33.933 94.924 134.813 8 256 8c66.448 0 126.791 26.136 171.315 68.685L463.03 40.97C478.149 25.851 504 36.559 504 57.941V192c0 13.255-10.745 24-24 24H345.941c-21.382 0-32.09-25.851-16.971-40.971l41.75-41.749zM32 296h134.059c21.382 0 32.09 25.851 16.971 40.971l-41.75 41.75c31.262 29.273 71.835 45.319 114.876 45.28 77.418-.07 144.315-53.144 162.787-126.849 1.344-5.363 6.122-9.15 11.651-9.15h57.304c7.498 0 13.194 6.807 11.807 14.176C478.067 417.076 377.187 504 256 504c-66.448 0-126.791-26.136-171.315-68.685L48.97 471.03C33.851 486.149 8 475.441 8 454.059V320c0-13.255 10.745-24 24-24z"></path></svg> -->
+                        </button>   
+                    </form>
+                    
+                </div>
+                <!-- створити функцію закриття та відкриття бокового меню пошуку js -->
+                <div class="loads__head-advanced" id="loads__head-advanced">
+                    <span>Advansed search</span>    
+                </div>
+            </div>
+        </div>
 
-    </section>
+<!-- loads list ----------------- -->
+        <div class="loads-list">
+            <table class="loads-list__table">
+                <th class="loads-list__head loads-list__1">United Transport</th>
+                <th class="loads-list__head loads-list__2">Pickup</th>
+                <th class="loads-list__head loads-list__3">Delivery</th>
+                <th class="loads-list__head loads-list__4">Loaded Miles</th>
+                <th class="loads-list__head loads-list__5">Wheight</th>
+                <th class="loads-list__head loads-list__6">Equipment</th>
+                <th class="loads-list__head loads-list__7"> </th>
+                <tr >
+                    <td class="loads-list__item loads-list__item--1">NUM101011</td>
+                    <td class="loads-list__item loads-list__item--2">Hammond, IL
+                        <p>7:01 AM</p>
+                    </td>
+                    <td class="loads-list__item loads-list__item--3">Detroit, MI
+                        <p>5:01 PM</p></td>
+                    <td class="loads-list__item oads-list__item--4">450</td>
+                    <td class="loads-list__item loads-list__item--5">42 655 lbs</td>
+                    <td class="loads-list__item loads-list__item--6">Dry Van</td>
+                    <td class="loads-list__item">
+                        <a class="loads-list__btn" href="#">Booking Info</a>
+                    </td>                    
+                </tr>
+                <tr >
+                    <td class="loads-list__item loads-list__item--1">NUM101012</td>
+                    <td class="loads-list__item loads-list__item--2">Hammond, IL
+                        <p>7:01 AM</p>
+                    </td>
+                    <td class="loads-list__item loads-list__item--3">Detroit, MI
+                        <p>5:01 PM</p></td>
+                    <td class="loads-list__item oads-list__item--4">450</td>
+                    <td class="loads-list__item loads-list__item--5">42 655 lbs</td>
+                    <td class="loads-list__item loads-list__item--6">Dry Van</td>
+                    <td class="loads-list__item">
+                        <a class="loads-list__btn" href="#">Booking Info</a>
+                    </td>                    
+                </tr>
+                <tr >
+                    <td class="loads-list__item loads-list__item--1">NUM101013</td>
+                    <td class="loads-list__item loads-list__item--2">Hammond, IL
+                        <p>7:01 AM</p>
+                    </td>
+                    <td class="loads-list__item loads-list__item--3">Detroit, MI
+                        <p>5:01 PM</p></td>
+                    <td class="loads-list__item oads-list__item--4">450</td>
+                    <td class="loads-list__item loads-list__item--5">42 655 lbs</td>
+                    <td class="loads-list__item loads-list__item--6">Dry Van</td>
+                    <td class="loads-list__item">
+                        <a class="loads-list__btn" href="#">Booking Info</a>
+                    </td>                    
+                </tr>
+                <tr >
+                    <td class="loads-list__item loads-list__item--1">NUM101014</td>
+                    <td class="loads-list__item loads-list__item--2">Hammond, IL
+                        <p>7:01 AM</p>
+                    </td>
+                    <td class="loads-list__item loads-list__item--3">Detroit, MI
+                        <p>5:01 PM</p></td>
+                    <td class="loads-list__item oads-list__item--4">450</td>
+                    <td class="loads-list__item loads-list__item--5">42 655 lbs</td>
+                    <td class="loads-list__item loads-list__item--6">Dry Van</td>
+                    <td class="loads-list__item">
+                        <a class="loads-list__btn" href="#">Booking Info</a>
+                    </td>                    
+                </tr>
+            </table>
+        </div> <!-- /.loads__list------------->
+
+    </section> <!-- /.loads ------------>
+    
 </div>
