--- a/src/index.html
+++ b/src/index.html
@@ -240,9 +240,9 @@ title: United Transport | Home
                         <th class="loads-list__head loads-list__3">Delivery</th>
                         <th class="loads-list__head loads-list__4">Loaded Miles</th>
                         <th class="loads-list__head loads-list__5">Wheight</th>
-                        <th class="loads-list__head loads-list__5">Rate, $</th>
-                        <th class="loads-list__head loads-list__6">Type of van</th>
-                        <th class="loads-list__head loads-list__7"> </th>
+                        <th class="loads-list__head loads-list__6">Rate, $</th>
+                        <th class="loads-list__head loads-list__7">Type of van</th>
+                        
                         <tr >
                             <td class="loads-list__item loads-list__item--1">NUM101011</td>
                             <td class="loads-list__item loads-list__item--2">Hammond, IL
@@ -265,6 +265,7 @@ title: United Transport | Home
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti itaque eveniet ea adipisci! Quam ipsam, nisi quo corporis dicta repellat!
                 </p>
+                <a href="book_load" class="loads-list__btn sidenav__bookit">Book it!</a>
             </div>            
           </div>
         <!-- /book info--------------- -->
