--- a/src/index.html
+++ b/src/index.html
@@ -416,41 +416,9 @@ title: United Transport | Home
         <!-- Book info ------- -->
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <div class="sidenav__content">
-                <div class="loads-list">
-                    <table class="loads-list__table   table-bordered table-striped">
-                        <th class="loads-list__head loads-list__1">United Transport</th>
-                        <th class="loads-list__head loads-list__2">Pickup</th>
-                        <th class="loads-list__head loads-list__3">Delivery</th>
-                        <th class="loads-list__head loads-list__4">Loaded Miles</th>
-                        <th class="loads-list__head loads-list__5">Wheight</th>
-                        <th class="loads-list__head loads-list__6">Rate, $</th>
-                        <th class="loads-list__head loads-list__7">Type of van</th>
-                        
-                        <tr >
-                            <td class="loads-list__item loads-list__item--1">NUM101011</td>
-                            <td class="loads-list__item loads-list__item--2">Hammond, IL
-                                <p>7:01 AM</p>
-                            </td>
-                            <td class="loads-list__item loads-list__item--3">Detroit, MI
-                                <p>5:01 PM</p></td>
-                            <td class="loads-list__item oads-list__item--4">450</td>
-                            <td class="loads-list__item loads-list__item--5">42 655 lbs</td>
-                            <td class="loads-list__item loads-list__item--6">1400 $</td>
-                            <td class="loads-list__item loads-list__item--7">Dry Van</td>                    
-                        </tr>
-                    </table>
-                </div>
-                <h2 class="loads-coment">Comodity:</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti itaque eveniet ea adipisci! Quam ipsam, nisi quo corporis dicta repellat!
-                </p>
-                <h2>Warning:</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti itaque eveniet ea adipisci! Quam ipsam, nisi quo corporis dicta repellat!
-                </p>
-                <a href="book_load" class="loads-list__btn sidenav__bookit">Book it!</a>
-            </div>            
+            <frameset>
+                <iframe class="book-info__frame" src="index.html" frameborder="0"></iframe>
+            </frameset>
         </div>
         <!-- /book info--------------- -->
 
@@ -561,6 +529,5 @@ title: United Transport | Home
             </table>
         </div> <!-- /loads list -------------- --> 
 
-    </section> <!-- /.loads ------------>
-    
+    </section> <!-- /.loads ------------>    
 </div> <!-- /.conteiner   -->
